Tring to fix weird About Me wrapping

--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,8 @@ html{
 #navbar-list{
     list-style: none;
     display: flex;
-    font-size: large;
+    flex-wrap: nowrap;
+    font-size: 20px;
 }
 
 .navbar-item{
